cabal-version:       2.0
name:                p01
version:             0.1.0.0
synopsis:            Test package
description:         Test package
homepage:            https://github.com/githubuser/p01#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Test
build-type:          Custom
extra-source-files:  src/P01/*.fnk

custom-setup
  setup-depends:       base  >= 4.7 && < 5
                     , Cabal >= 2.0
                     , finkel-setup

library
  hs-source-dirs:      src
  exposed-modules:     P01.A
                       P01.B
                       P01.C
                       P01.D
                       P01.E
                       P01.F
                       P01.G1
                       P01.G2
                       P01.H
                       P01.I
                       P01.J
                       Paths_p01
  autogen-modules:     Paths_p01
  build-depends:       base >= 4.7 && < 5
                     , finkel-kernel
  build-tool-depends:  fkc:fkc >= 0.1 && < 1
  default-language:    Haskell2010

executable p01
  if impl(ghc >= 8.4.0)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      exec
  main-is:             p01.hs
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:       base
                     , p01
  default-language:    Haskell2010

test-suite p01-test
  if impl(ghc >= 8.4.0)
    buildable: True
  else
    buildable: False
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TestAll
  build-depends:       base
                     , finkel-kernel
                     , p01
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/p01
