cabal-version:   3.0
name:            p02
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Author name here
maintainer:      example@example.com
category:        Development
build-type:      Custom
extra-doc-files: CHANGELOG.md

custom-setup
  setup-depends: base  >= 4.14 && < 5
               , Cabal >= 3.2
               , finkel-setup

common warnings
    ghc-options: -Wall

common finkel
    build-depends:      finkel-kernel
    build-tool-depends: fnkpp:fnkpp
    ghc-options:        -fplugin Language.Finkel.Plugin
    if impl (ghc >= 9.6.0)
      ghc-options:      -keep-hscpp-files
    else
      ghc-options:      -F -pgmF fnkpp -optF --no-warn-interp

library
    import:           warnings, finkel
    exposed-modules:  MyLib
    build-depends:    base >= 4.14 && < 5
    hs-source-dirs:   src
    default-language: Haskell2010

executable p02
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >= 4.14 && < 5
                    , p02
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite p02-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base >= 4.14 && < 5
                    , p02
