cabal-version:       2.0
name:                p02
version:             0.1.0.0
synopsis:            Test package
description:         Sample package in finkel-tool test
homepage:            https://github.com/githubuser/p02#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Test
build-type:          Custom
extra-source-files:  src/P02/*.fnk

custom-setup
  setup-depends:       base >= 4.7 && < 5
                     , Cabal >= 1.10
                     , finkel-tool

library
  hs-source-dirs:      src
  exposed-modules:     P02.A
  build-depends:       base >= 4.7 && < 5
  build-tool-depends:  finkel-tool:finkel
  default-language:    Haskell2010

executable p02
  if impl(ghc >= 8.4.0)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      exec
  main-is:             p02.hs
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:       base
                     , p02
  default-language:    Haskell2010

test-suite p02-test
  if impl(ghc >= 8.4.0)
    buildable: True
  else
    buildable: False
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , p02
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/p02
